fix missing media folder on do

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
   },
   "index": {
     "title": "Vip escorts in Paraguay",
+    "subtitle": "Paraguay Escort. Py Escort.",
     "description": "Your best escorts in Paraguay and Asunción. High level companions for you",
     "noEscort": "No escort found",
     "levelName": "{level} level",
@@ -279,7 +280,6 @@
   "contactUs": "Contact us",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "tags": "Paraguay Escort. Py Escort",
     "titleIndipendent": "Indipendent escorts",
     "descriptionIndipendent": "Indipendent escort in Paraguay",
     "titleAgency": "Escorts of {agency} agency",
