--- a/lang/pt.json
+++ b/lang/pt.json
@@ -11,6 +11,7 @@
   },
   "index": {
     "title": "Acompanhantes no Paraguai",
+    "subtitle": "Acompanhantes Paraguai. Acompanhantes Py.",
     "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você",
     "noEscort": "Nenhum acompanhante encontrada",
     "levelName": "Nível {level}",
@@ -279,7 +280,6 @@
   "contactUs": "Contate-Nos",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "tags": "Acompanhantes Paraguai. Acompanhantes Py",
     "titleIndipendent": "Acompanhantes independentes",
     "descriptionIndipendent": "Acompanhantes independentes no Paraguai",
     "titleAgency": "Acompanhantes da agência {agency}",
