--- a/lang/es.json
+++ b/lang/es.json
@@ -11,6 +11,7 @@
   },
   "index": {
     "title": "Las mejores escort en Paraguay",
+    "subtitle": "Escort Paraguay. Escort Py.",
     "description": "Tus acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas compañía de alto nivel para ti",
     "noEscort": "No se encontró ninguna escort",
     "levelName": "Nivel {level}",
@@ -278,7 +279,6 @@
   "contactUs": "Contacta con nosotros",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "tags": "Escort Paraguay. Escort Py",
     "titleIndipendent": "Escort indipendientes",
     "descriptionIndipendent": "Escort y acompañantes indipendientes en Paraguay",
     "titleAgency": "Escort agencia {agency}",
