add collection pages for are agency and extra

--- a/lang/en.json
+++ b/lang/en.json
@@ -21,6 +21,36 @@
     "title": "New escorts Paraguay",
     "description": "The latest added escorts in Paraguay"
   },
+  "extra": {
+    "_": "Special services",
+    "title": "Escorts with {extra} service",
+    "description": "Escorts that offer {extra} service in Paraguay",
+    "kiss": "Kisses",
+    "couple": "Attention to couples",
+    "bdsm": "BDSM",
+    "rolePlay": "Role play games",
+    "threesome": "Threesomes",
+    "full": "Full",
+    "fantasy": "Fantasies",
+    "pornostar": "Pornostar experince",
+    "massage": "Relaxing massages",
+    "whatAbout": "What is it about?"
+  },
+  "agency": {
+    "_": "Agency",
+    "title": "Escorts of {agency} agency",
+    "description": "Escorts provided by the agency {agency} in Paraguay for you",
+    "titleIndipendent": "Indipendent escorts",
+    "descriptionIndipendent": "Indipendent escort in Paraguay"
+  },
+  "area": {
+    "_": "Area",
+    "titleOutcallOnly": "Escorts outcall only",
+    "descriptionOutcallOnly": "Escorts for hotel visits in Paraguay",
+    "titleArea": "Escorts in {area}",
+    "descriptionNeighbourhood": "Escorts for incall in the {area} neighbourhood of Asunción",
+    "descriptionCity": "Escorts for incall in the {area} city of Paraguay"
+  },
   "error": {
     "pageNotFound": "This page could not be found",
     "unauthorized": "Unauthorized",
@@ -95,11 +125,9 @@
   "name1": "Name first girl",
   "name2": "Name second girl",
   "indipendentOrAgency": "Indipendent or Agency",
-  "agency": "Agency",
   "nationality": "Country of origin",
   "nationality1": "Country of origin first girl",
   "nationality2": "Country of origin second girl",
-  "area": "Area",
   "selectArea": "Select your area",
   "rate": "Hourly rate",
   "services": "Services",
@@ -121,16 +149,6 @@
   "breast2": "Breast second girl",
   "waist2": "Waist second girl",
   "hips2": "Hips second girl",
-  "extra": "Special services",
-  "kiss": "Kisses",
-  "couple": "Attention to couples",
-  "bdsm": "BDSM",
-  "rolePlay": "Role play games",
-  "threesome": "Threesomes",
-  "full": "Full",
-  "fantasy": "Fantasies",
-  "pornostar": "Pornostar experince",
-  "massage": "Relaxing massages",
   "extraFreeWorning": "To get a free lifetime advertisement you still have to select {missingExtra} special services.",
   "languages": "Languages",
   "english": "English",
@@ -254,7 +272,6 @@
   "similarPosts": "Related Posts",
   "heroTitle": "The web of the luxury escorts",
   "heroSubtitle": "Publica tu anuncio an la pagina de las escort mas exitosa de Paraguay",
-  "whatAbout": "What is it about?",
   "byNeighborhood": "Neighborhood",
   "byPrice": "Price",
   "byService": "Service",
@@ -280,17 +297,6 @@
   "contactUs": "Contact us",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "titleIndipendent": "Indipendent escorts",
-    "descriptionIndipendent": "Indipendent escort in Paraguay",
-    "titleAgency": "Escorts of {agency} agency",
-    "descriptionAgency": "Escorts provided by the agency {agency} in Paraguay for you",
-    "titleOutcallOnly": "Escorts outcall only",
-    "descriptionOutcallOnly": "Escorts for hotel visits in Paraguay",
-    "titleArea": "Escorts in {area}",
-    "descriptionNeighbourhood": "Escorts for incall in the {area} neighbourhood of Asunción",
-    "descriptionCity": "Escorts for incall in the {area} city of Paraguay",
-    "titleExtra": "Escorts with {extra} service",
-    "descriptionExtra": "Escorts that offer {extra} service in Paraguay",
     "blogDescription": "The blog of the Paraguay escorts"
   },
   "jsonld": {
