--- a/lang/es.json
+++ b/lang/es.json
@@ -21,6 +21,36 @@
     "title": "Novedades escort Paraguay",
     "description": "Las últimas novedades cerca las escort en Paraguay"
   },
+  "extra": {
+    "title": "Escort con servicio {extra}",
+    "description": "Escort y acompañantes que ofrecen el servicio de {extra} en Paraguay",
+    "_": "Servicios especiales",
+    "kiss": "Besos reales",
+    "couple": "Atención a parejas",
+    "bdsm": "BDSM",
+    "rolePlay": "Cambio de roles",
+    "threesome": "Tríos",
+    "full": "Completo",
+    "fantasy": "Fantasías",
+    "pornostar": "Pornostar",
+    "massage": "Masajes relajantes",
+    "whatAbout": "¿De qué se trata?"
+  },
+  "agency": {
+    "_": "Agencia",
+    "title": "Escort agencia {agency}",
+    "description": "Escort y acompañantes de la agencia {agency} en Paraguay",
+    "titleIndipendent": "Escort indipendientes",
+    "descriptionIndipendent": "Escort y acompañantes indipendientes en Paraguay"
+  },
+  "area": {
+    "_": "Barrio",
+    "titleOutcallOnly": "Escort solo salida",
+    "descriptionOutcallOnly": "Escort y acompañantes para salidas en hotel y moteles en Paraguay",
+    "titleArea": "Escort en {area}",
+    "descriptionNeighbourhood": "Escort y acompañantes con departmanento proprio en el barrio de {area} en Asunción",
+    "descriptionCity": "Escort y acompañantes con departmanento proprio en la ciudad de {area} en Paraguay"
+  },
   "error": {
     "pageNotFound": "Esta página no se pudo encontrar",
     "unauthorized": "No autorizado",
@@ -95,10 +125,8 @@
   "name1": "Nombre Primera Chica",
   "name2": "Nombre Segunda Chica",
   "indipendentOrAgency": "Independiente o Agencia",
-  "agency": "Agencia",
   "nationality": "País de origen",
   "nationality2": "País de origen segunda chica",
-  "area": "Barrio",
   "selectArea": "Selecciona tu barrio",
   "rate": "Tarifa oraria",
   "services": "Servicios",
@@ -120,16 +148,6 @@
   "breast2": "Busto segunda chica",
   "waist2": "Cintura segunda chica",
   "hips2": "Caderas segunda chica", 
-  "extra": "Servicios especiales",
-  "kiss": "Besos reales",
-  "couple": "Atención a parejas",
-  "bdsm": "BDSM",
-  "rolePlay": "Cambio de roles",
-  "threesome": "Tríos",
-  "full": "Completo",
-  "fantasy": "Fantasías",
-  "pornostar": "Pornostar",
-  "massage": "Masajes relajantes",
   "extraFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta seleccionar {missingExtra} servicios especiales.",
   "languages": "Idiomas",
   "english": "Inglés",
@@ -253,7 +271,6 @@
   "similarPosts": "Artículos Relacionados",
   "heroTitle": "La página de las escort exitosas",
   "heroSubtitle": "Publica tu anuncio en la página de las escort mas atractiva de Paraguay",
-  "whatAbout": "¿De qué se trata?",
   "byNeighborhood": "Ubicación",
   "byPrice": "Precio",
   "byService": "Servicio",
@@ -279,17 +296,6 @@
   "contactUs": "Contacta con nosotros",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "titleIndipendent": "Escort indipendientes",
-    "descriptionIndipendent": "Escort y acompañantes indipendientes en Paraguay",
-    "titleAgency": "Escort agencia {agency}",
-    "descriptionAgency": "Escort y acompañantes de la agencia {agency} en Paraguay",
-    "titleOutcallOnly": "Escort solo salida",
-    "descriptionOutcallOnly": "Escort y acompañantes para salidas en hotel y moteles en Paraguay",
-    "titleArea": "Escort en {area}",
-    "descriptionNeighbourhood": "Escort y acompañantes con departmanento proprio en el barrio de {area} en Asunción",
-    "descriptionCity": "Escort y acompañantes con departmanento proprio en la ciudad de {area} en Paraguay",
-    "titleExtra": "Escort con servicio {extra}",
-    "descriptionExtra": "Escort y acompañantes que ofrecen el servicio de {extra} en Paraguay",
     "blogDescription": "El blog de la escort y acompañantes en Paraguay"
   },
   "jsonld": {
