--- a/lang/pt.json
+++ b/lang/pt.json
@@ -21,6 +21,36 @@
     "title": "Novidades acompanhantes Paraguai",
     "description": "Últimas novidades cerca las acompanhantes no Paraguai"
   },
+  "extra": {
+    "_": "Serviços especiais",
+    "title": "Acompanhantes com serviço {extra}",
+    "description": "Acompanhantes que oferecem o serviço de {extra} no Paraguai",
+    "kiss": "Beijos",
+    "couple": "Atenção aos casais",
+    "bdsm": "BDSM",
+    "rolePlay": "Mudando de papéis",
+    "threesome": "Sexo a três",
+    "full": "Completo",
+    "fantasy": "Fantasias",
+    "pornostar": "Estrela pornô",
+    "massage": "Massagens relaxantes",
+    "whatAbout": "Sobre o que é isso?"
+  },
+  "agency": {
+    "_": "Agência",
+    "title": "Acompanhantes independentes",
+    "description": "Acompanhantes independentes no Paraguai",
+    "titleAgency": "Acompanhantes da agência {agency}",
+    "descriptionAgency": "Acompanhantes fornecidos pela agência {agency} no Paraguai para voce"
+  },
+  "area": {
+    "_": "Bairro",
+    "titleOutcallOnly": "Apenas chamada externa",
+    "descriptionOutcallOnly": "Acompanhantes para visitas ao hotel no Paraguai",
+    "titleArea": "Acompanhantes em {area}",
+    "descriptionNeighbourhood": "Acompanhantes com seu próprio apartamento no bairro {area} em Assunção",
+    "descriptionCity": "Acompanhantes com apartamento próprio na cidade de {area} no Paraguai"
+  },
   "error": {
     "pageNotFound": "Página não encontrada",
     "unauthorized": "Não autorizado",
@@ -95,11 +125,9 @@
   "name1": "Nome Primeira Menina",
   "name2": "Nome Segunda Menina",
   "indipendentOrAgency": "Independente ou Agência",
-  "agency": "Agência",
   "nationality": "País de origem",
   "nationality1": "País de origem primeira menina",
   "nationality2": "País de origem segunda menina",
-  "area": "Bairro",
   "selectArea": "Selecione seu bairro",
   "rate": "Taxa horária",
   "services": "Serviços",
@@ -121,16 +149,6 @@
   "breast2": "Peito segunda menina",
   "waist2": "Cintura segunda menina",
   "hips2": "Quadril segunda menina",
-  "extra": "Serviços especiais",
-  "kiss": "Beijos",
-  "couple": "Atenção aos casais",
-  "bdsm": "BDSM",
-  "rolePlay": "Mudando de papéis",
-  "threesome": "Sexo a três",
-  "full": "Completo",
-  "fantasy": "Fantasias",
-  "pornostar": "Estrela pornô",
-  "massage": "Massagens relaxantes",
   "extraFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa selecionar {missingExtra} serviços especiais.",
   "languages": "Línguas",
   "english": "Inglês",
@@ -254,7 +272,6 @@
   "similarPosts": "Postagens relacionadas",
   "heroTitle": "A página de acompanhantes de sucesso",
   "heroSubtitle": "Publique seu anúncio na página de acompanhante mais atraente do Paraguai",
-  "whatAbout": "Sobre o que é isso?",
   "byNeighborhood": "Bairro",
   "byPrice": "Preço",
   "byService": "Serviço",
@@ -280,17 +297,6 @@
   "contactUs": "Contate-Nos",
   "seo": {
     "name": "🫦\uFE0F | Paraguay XP",
-    "titleIndipendent": "Acompanhantes independentes",
-    "descriptionIndipendent": "Acompanhantes independentes no Paraguai",
-    "titleAgency": "Acompanhantes da agência {agency}",
-    "descriptionAgency": "Acompanhantes fornecidos pela agência {agency} no Paraguai para voce",
-    "titleOutcallOnly": "Apenas chamada externa",
-    "descriptionOutcallOnly": "Acompanhantes para visitas ao hotel no Paraguai",
-    "titleArea": "Acompanhantes em {area}",
-    "descriptionNeighbourhood": "Acompanhantes com seu próprio apartamento no bairro {area} em Assunção",
-    "descriptionCity": "Acompanhantes com apartamento próprio na cidade de {area} no Paraguai",
-    "titleExtra": "Acompanhantes com serviço {extra}",
-    "descriptionExtra": "Acompanhantes que oferecem o serviço de {extra} no Paraguai",
     "blogDescription": "O blog das acompanhantes do Paraguai"
   },
   "jsonld": {
