--- a/lang/es.json
+++ b/lang/es.json
@@ -66,7 +66,7 @@
   "auth": {
     "logoutEmail": "Salir",
     "loginPrefix": "Código pais",
-    "loginNumber": "Iniciar sesión",
+    "loginNumber": "Número de teléfono",
     "loginCode": "Código",
     "sendWhatsapp": "Enviar código por whatsapp",
     "verifyCode": "Comprueba el código enviado a través de whatsapp",
