--- a/lang/pt.json
+++ b/lang/pt.json
@@ -66,7 +66,7 @@
   "auth": {
     "logoutEmail": "Sair",
     "loginPrefix": "Código do país",
-    "loginNumber": "Acesso",
+    "loginNumber": "Número de telefone",
     "loginCode": "Código",
     "sendWhatsapp": "Enviar código de acesso no whatsapp",
     "verifyCode": "Confira o código enviado via whatsapp",
