--- a/lang/es.json
+++ b/lang/es.json
@@ -75,7 +75,8 @@
     "configuration": "Hay un problema con la configuración del servidor.\n\nConsulte los registros del servidor para obtener más información.",
     "accessDenied": "No tiene permiso para iniciar sesión.",
     "verification": "El código de inicio de sesión ya no es válido.\n\nEs posible que ya se haya utilizado o que haya caducado.",
-    "generic": "Generic login error."
+    "generic": "Generic login error.",
+    "disconnected": "El inicio de sesión está temporalmente desactivado por mantenimiento.\n\nInténtalo de nuevo más tarde o contáctanos por Whatsapp en"
   },
   "auth": {
     "logoutEmail": "Salir",
@@ -85,7 +86,8 @@
     "sendWhatsapp": "Enviar código por whatsapp",
     "verifyCode": "Comprueba el código enviado a través de whatsapp",
     "magicLinkInstructions": "No se requiere contraseña.\n\nLe enviaremos un código para iniciar sesión por whatsapp.",
-    "messageContent": "Su código de acceso es:"
+    "messageContent": "Su código de acceso es:",
+    "goBack": "Volver"
   },
   "and": "y", 
   "birthDate": "Fecha de nacimiento",
