reduce image preview quality

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,8 +11,8 @@
   },
   "index": {
     "title": "Vip escorts in Paraguay",
-    "subtitle": "Paraguay Escort. Py Escort.",
-    "description": "Your best escorts in Paraguay and Asunción. High level companions for you",
+    "subtitle": "Paraguay Escorts. Py Escorts.",
+    "description": "The best escorts in Paraguay and Asunción. High level companions for you. Paraguay Escorts. Py Escorts.",
     "noEscort": "No escort found",
     "levelName": "{level} level",
     "PYG": "PYG"
