--- a/lang/pt.json
+++ b/lang/pt.json
@@ -12,7 +12,7 @@
   "index": {
     "title": "Acompanhantes no Paraguai",
     "subtitle": "Acompanhantes Paraguai. Acompanhantes Py.",
-    "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você",
+    "description": "Seus melhores acompanhantes e escort no Paraguai e Assunção. Acompanhantes de alto nível para você. Acompanhantes Paraguai. Acompanhantes Py.",
     "noEscort": "Nenhum acompanhante encontrada",
     "levelName": "Nível {level}",
     "PYG": "PYG"
