--- a/lang/es.json
+++ b/lang/es.json
@@ -12,7 +12,7 @@
   "index": {
     "title": "Las mejores escort en Paraguay",
     "subtitle": "Escort Paraguay. Escort Py.",
-    "description": "Tus acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas compañía de alto nivel para ti",
+    "description": "Acompañantes en Paraguay. Las mejores escorts de Asunción. Chicas de compañía de alto nivel para ti. Escort Paraguay. Escort Py.",
     "noEscort": "No se encontró ninguna escort",
     "levelName": "Nivel {level}",
     "PYG": "Gs"
