add escort media gallery

--- a/lang/en.json
+++ b/lang/en.json
@@ -122,9 +122,9 @@
   "threeMonthsDescription": "By publishing your advertisement before {limitDate} you are eligible for three months of free advertisement.",
   "freePublicationTitle": "Lifetime free advertisement",
   "freePublicationFailed": "If you want a lifetime free advertisement, please complete the following tasks:",
-  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição de {wordsCount} palavras, fazer upload de {mediaCount} fotos e vídeos e selecionar {extraCount} serviços extras, você se qualifica para um anúncio gratuito vitalício.",
+  "freePublicationSuccess": "Parabéns! Ao escrever uma descrição de {wordsCount} palavras, fazer upload de {galleryCount} fotos e vídeos e selecionar {extraCount} serviços extras, você se qualifica para um anúncio gratuito vitalício.",
   "fixDescription": "- You need to publish at least {minWords} words in your description, you are still missing {missingWords} words. You can review your description",
-  "fixMedia": "- You need to provide at least {minMedia} photos and videos, you are still missing {missingMedia} of them. You can review your media",
+  "fixGallery": "- You need to provide at least {minGallery} photos and videos, you are still missing {missingGallery} of them. You can review your media",
   "fixExtra": "- You need to select at least {minExtra} extra services. You are still missing {missingExtra} of them. You can add more",
   "here": "here",
   "accept": "Publication Terms",
@@ -191,13 +191,13 @@
   "toHour": "To hour",
   "selectHour": "Select a time",
   "nudeMessage": "Photos and video with nudity will be removed.",
-  "media": "Photos & Videos",
+  "gallery": "Photos & Videos",
   "blurPhoto": "Blur face on photos",
   "videoNotBlurred": "Only images are blurred. Videos are not.",
   "yes": "Yes",
   "no": "No",
   "bookSession": "Book a photo and video session",
-  "mediaFreeWorning": "To get a free lifetime advertisement you still miss {missingMedia} photos or videos.",
+  "galleryFreeWorning": "To get a free lifetime advertisement you still miss {missingGallery} photos or videos.",
   "type": "Advertisement type",
   "individual": "Individual",
   "duo": "Duo",
@@ -238,7 +238,6 @@
   "invalidWhatsappCode": "Invalid Whatsapp code",
   "commentPublished": "Comment saved. It now needs admin approval.",
   "call": "Call",
-  "gallery": "Gallery",
   "tapToEnlarge": "Tap to enlarge",
   "details": "Details",
   "sendWhatsapp": "Send Whatsapp",
