--- a/lang/es.json
+++ b/lang/es.json
@@ -122,9 +122,9 @@
   "threeMonthsDescription": "Al publicar tu anuncio antes del {limitDate} tienes derecho a 3 meses de publicación gratis.",
   "freePublicationTitle": "Publicación gratis de por vida",
   "freePublicationFailed": "Si deseas publicar gratis de por vida, por favor completa las siguientes tareas:",
-  "freePublicationSuccess": "¡Felicidades! Al escribir una descripción de {wordsCount} palabras, cargar {mediaCount} fotos y videos y seleccionar {extraCount} servicios adicionales, es elegible para un anuncio gratuito de por vida.",
+  "freePublicationSuccess": "¡Felicidades! Al escribir una descripción de {wordsCount} palabras, cargar {galleryCount} fotos y videos y seleccionar {extraCount} servicios adicionales, es elegible para un anuncio gratuito de por vida.",
   "fixDescription": "- Debes escribir al menos {minWords} palabras en tu descripción, aún te quedan {missingWords}. Puedes revisionar tu descripción",
-  "fixMedia": "- Debes proporcionar al menos {minMedia} fotos y videos, todavía te faltan {missingMedia}. Puedes agregar mas",
+  "fixGallery": "- Debes proporcionar al menos {minGallery} fotos y videos, todavía te faltan {missingGallery}. Puedes agregar mas",
   "fixExtra": "- Debes seleccionar al menos {minExtra} servicios adicionales. Aún te faltan {missingExtra}. Puedes agregar más",
   "here": "aquí",
   "accept": "Condiciones de publicación",
@@ -190,13 +190,13 @@
   "toHour": "Hasta la hora",
   "selectHour": "Seleccione una orario",
   "nudeMessage": "Se eliminarán las fotos y videos con desnudos.",
-  "media": "Fotos y Videos",
+  "gallery": "Fotos y Videos",
   "blurPhoto": "Ocultar rostro en fotos",
   "videoNotBlurred": "Solo las imágenes están ocultadas. Los vídeos no.",
   "yes": "Sí",
   "no": "No",
   "bookSession": "Reserva una sesión de foto y vídeo",
-  "mediaFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingMedia} fotos y videos.",
+  "galleryFreeWorning": "Para aprovechar de una publicación gratis de por vida, aún te falta cargar {missingGallery} fotos y videos.",
   "type": "Tipo de anuncio",
   "individual": "Individual",
   "duo": "Duo",
@@ -237,7 +237,6 @@
   "invalidWhatsappCode": "Código de Whatsapp no ​​válido",
   "commentPublished": "Comentario guardado. Ahora necesita la aprobación del administrador.",
   "call": "Llamar",
-  "gallery": "Galería",
   "tapToEnlarge": "Toque para agrandar",
   "details": "Detalles",
   "sendWhatsapp": "Enviar Whatsapp",
