--- a/lang/pt.json
+++ b/lang/pt.json
@@ -123,9 +123,9 @@
   "threeMonthsDescription": "Ao publicar seu anúncio antes de {limitDate}, você tem direito a três meses de publicidade gratuita.",
   "freePublicationTitle": "Postagem gratuita para sempre",
   "freePublicationFailed": "Se você deseja um anúncio gratuito vitalício, corrija os seguintes problemas",
-  "freePublicationSuccess": "Congraturation! By writing a description of {wordsCount} words, uploading {mediaCount} photos and videos and selecting {extraCount} extra services, you are eligible for a lifetime free advertisement.",
+  "freePublicationSuccess": "Congraturation! By writing a description of {wordsCount} words, uploading {galleryCount} photos and videos and selecting {extraCount} extra services, you are eligible for a lifetime free advertisement.",
   "fixDescription": "- Você deve escrever pelo menos {minWords} palavras em sua descrição, você ainda tem {missingWords} restantes. Você pode verificar sua descrição",
-  "fixMedia": "- Você deve fornecer pelo menos {minMedia} fotos e vídeos, ainda faltam {missingMedia}. Você pode adicionar mais",
+  "fixGallery": "- Você deve fornecer pelo menos {minGallery} fotos e vídeos, ainda faltam {missingGallery}. Você pode adicionar mais",
   "fixExtra": "- Você precisa selecionar pelo menos {minExtra} serviços extras. Ainda faltam {missingExtra} deles. Você pode adicionar mais",
   "here": "aqui",
   "accept": "Termos de publicação",
@@ -192,13 +192,13 @@
   "toHour": "Para hora",
   "selectHour": "Selecione um horário",
   "nudeMessage": "Fotos e vídeos com nudez serão removidos.",
-  "media": "Fotos e vídeos",
+  "gallery": "Fotos e vídeos",
   "blurPhoto": "Ocultar rosto nas fotos",
   "videoNotBlurred": "Apenas as imagens estão ocultadas. Os vídeos não são",
   "yes": "Sim",
   "no": "Não",
   "bookSession": "Agende uma sessão de foto e vídeo",
-  "mediaFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa enviar {missingMedia} fotos e vídeos.",
+  "galleryFreeWorning": "Para aproveitar uma publicação gratuita vitalícia, você ainda precisa enviar {missingMedia} fotos e vídeos.",
   "type": "Tipo de anúncio",
   "individual": "Individual",
   "duo": "Duo",
@@ -239,7 +239,6 @@
   "invalidWhatsappCode": "Código Whatsapp inválido",
   "commentPublished": "Comentário salvo. Agora precisa de aprovação do administrador.",
   "call": "Ligar",
-  "gallery": "Galeria",
   "tapToEnlarge": "Toque para ampliar",
   "details": "Detalhes",
   "sendWhatsapp": "Enviar Whatsapp",
